
OpenMS library improvements:
- read ProtXML files
- support protein groups in ProteinIdentification/idXML
- Line numbers in errors of Textbased files (most formats: dta, dta2D, FASTAFile, PepNovoOutfile, MascotGenericFile, MS2File, MSPFile, OMSSACSVFile, TextImporter (csv, msInspect, SpecArray?, Kroenik))

TOPPView improvements:
- basic visualization of peptide identifications in idXML

TOPPAS improvements:
- added copy/paste for workflow items
- workflows can now include other workflows (File>Include)
- several bug fixes

Changes to the Build System:
- external code support for CMake 2.8: External Code using 
  "include (${OpenMS_USE_FILE})" in its CMakeLists.txt 
  cannot be configured against OpenMS 1.7, however, 
  only minor changes are required to fix this.
  See the documentation for "Programming with OpenMS".
- nightly tests for external code
- SVN revision used to build the lib is remembered (finer version tracking)
- nightly coverage builds
- GUI testing (experimental)
- Visual Studio 2010 support

Bug fixes:
[new tracker: http://sourceforge.net/apps/trac/open-ms/query?status=closed&group=resolution&milestone=Release+1.7]
- #44   TOPPView warning "Cannot show projections!"
- #73   Resampler: can't create PNGs with TOPPAS
- #74   Default parameters of PTModel cause infinite loop
- #77   FuzzyDiff always returns 'true' when comparing any two PNG images
- #23   implement protXML
- #46   All TOPP/UTILS segfault if /share is not found
- #53   TOPPAS select directory has save as dialog
- #59   Test of external Code
- #61   automatic ini file Version number update
- #62   nightly tests for external code
- #63   rename methods named min() or max() to something else...
- #69   FileMerger needs ability to merge featureXML
- #91   Simple FF crashes on very sparse data
- #93   TOPPAS layer bug
- #110  Copy&paste, include workflows in current window
- #121  Tool categories and menu items in context menus have arbitrary order